# shelter-sp

./: .gitignore  CMakeLists.txt  README.md
dbinit/: CMakeLists.txt  dbinit.rc  main.cpp
dbman/: CMakeLists.txt  cdbbackup.cpp  cdbbackup.h  cdbinit.cpp  cdbinit.h  cdbmanager.cpp  cdbmanager.h  clogenabler.cpp  clogenabler.h  cutility.cpp  cutility.h  dbman.rc  dbman_global.h
dshelter/: CMakeLists.txt  csheltermain.cpp  csheltermain.h  csheltermain.ui  dshelter.rc  main.cpp
img2txt/: CMakeLists.txt  cimgtotext.cpp  cimgtotext.h  img2txt.rc  main.cpp
uishelter/: CMakeLists.txt  cnewuser.cpp  cnewuser.h  cnewuser.ui  cpasswordinput.cpp  cpasswordinput.h  cpasswordinput.ui  cusercheck.cpp  cusercheck.h  cusercheck.ui  cuserexitinfo.cpp  cuserexitinfo.h  cuserexitinfo.ui  cwgtuserlist.cpp  cwgtuserlist.h  cwgtuserlist.ui  uishelter.cpp  uishelter.h  uishelter.rc  uishelter_global.h
usmods/: CMakeLists.txt  cusermods.cpp  cusermods.h  cusermods.ui  main.cpp  usmods.rc
